	The '~' character in logpath and classlogpath now gets
	         replaced with the user's home directory.
	Added simple implementation of smartnarrow-to-admin that
	         creates a "type-admin" autofilter.
		 This was done mostly so that M-C-n and M-C-p do something
		 sane on admin messages.
	Added opera to the allowed options to the webbrowser variable.
	
1.2.1-pre-1
	Added RCS Id strings to all files.
	'show keymaps' shows details of all keymaps after summary list.
	Added --no-move option to delete command.
	        In particular, delete-and-always-move-down may now
		be implemented with 
		'( delete --no-move ; next --skip-deleted )'.
	Folded the nextmsg and prevmsg commands and functions together into 
	        one command which takes arguments.
		Added '--filter <name>' option (eg, for next_personal),
		'--skip-deleted' option, and
		'--last-if-none'/'--first-if-none' options.
		Help updated accordingly.  
		In particular, the 'personal' view is now used 
		for 'next personal'.  
	Updated examples/owlconf.erik with the above.
	Fixed the annoying pagedown sometimes-not-working bug.
	Made owl_function_fast*filt return a string and not do the 
	        narrowing, to make it more general.
	Added a smartfilter command that creates a filter
	        based on the current message and returns the name
		of the filter.
	Added --smart-filter and --smart-filter-instance options 
	        to the next and prev commands.
	Added M-C-n and M-C-p keybindings to "move to next message 
	        matching current" and "move to previous message 
		matching current"
	Added variables edit:maxfillcols and edit:maxwrapcols which 
	        will limit how wide editing paragraphs may get before
		they get wrapped.  This is a max and may be narrower
		depending on the current size of the window.
		If 0, the max is unlimited.  Default is 70 columns for
		edit:maxfillcols and unlimited for edit:maxwrapcols.
	Added smartzpunt command with key binding of "C-x k".