@@ -243,7 +243,8 @@ void owl_keys_setup_keymaps(owl_keyhandler *kh) {
   BIND_CMD("r",   "reply",            "reply to the current message");
   BIND_CMD("R",   "reply sender",     "reply to sender of the current message");
   BIND_CMD("C-r", "reply -e",         "reply to the current message, but allow editing of recipient");
-  BIND_CMD("C-R", "reply -e sender",  "reply to sender of the current message, but allow editing of recipient");
+  BIND_CMD("M-r", "reply -e",         "reply to the current message, but allow editing of recipient");
+  BIND_CMD("M-R", "reply -e sender",  "reply to sender of the current message, but allow editing of recipient");
 		  
   BIND_CMD("w",   "openurl",          "open a URL using a webbrowser");
 
